@@ -43,6 +43,7 @@ dillo-fltk2
  - Bound Ctrl+Space to toggle fullscreen mode.
  - Switched dillo to push a URL with fragment (anchor) into the stack.
  - Added a workaround for a CCC reentrancy segfault.
+ - Bound FltkMultiLineTextResource to the html parser (TEXTAREA).
    Patches: Jorge Arellano Cid
 +- Connected signals to <li> elements (fixes links within lists).
  - Enabled text, background-color and geometry in preferences.
